# programming-semestr-3

grid/: CMakeLists.txt
grid/include/: grid.hpp  multi_grid.hpp
grid/src/: grid.cpp
grid/tests/: test.cpp  test1.cpp  test2.cpp  test3.cpp
probability/: CMakeLists.txt
probability/data/: bonusdice_data.csv  data_processing.py  doubledice_data.csv  doubledice_data_with_inheritance.csv  penaltydice_data.csv  threedicepool_data.csv
probability/include/: BonusDice.hpp  Dice.hpp  DoubleDice.hpp  PenaltyDice.hpp  ThreeDicePool.hpp
probability/src/: BonusDice.cpp  Dice.cpp  DoubleDice.cpp  PenaltyDice.cpp  ThreeDicePool.cpp  main.cpp
skiplist/: CMakeLists.txt
skiplist/include/: coin.hpp  skiplist.hpp
skiplist/src/: iterator_test.cpp  node_test.cpp  random_test.cpp  skiplist_test.cpp  test1.cpp
skiplist/tests/: test.cpp
